dataset1235/2025-2/1955397009/users/209087680/executions/2304143742_2288958116.log
== RUN (2025-09-02 13:21:20)
-- CODE: 
x=input()
y=input()
if (x==2):
  z=input("insira ")
else:
  
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2
55.50
100.25
---- correct output:
130.69
-- ERROR:
File "XXXX", line 6
    
IndentationError: expected an indented block after 'else' statement on line 5
-- TEST CASE 2:
---- input:
2
50.00
100.00
---- correct output:
125.0
-- ERROR:
File "XXXX", line 6
    
IndentationError: expected an indented block after 'else' statement on line 5
-- TEST CASE 3:
---- input:
1
100.50
---- correct output:
100.5
-- ERROR:
File "XXXX", line 6
    
IndentationError: expected an indented block after 'else' statement on line 5
-- TEST CASE 4:
---- input:
2
99.99
120.25
---- correct output:
190.18
-- ERROR:
File "XXXX", line 6
    
IndentationError: expected an indented block after 'else' statement on line 5
-- TEST CASE 5:
---- input:
2
10.00
20.00
---- correct output:
25.0
-- ERROR:
File "XXXX", line 6
    
IndentationError: expected an indented block after 'else' statement on line 5
-- TEST CASE 6:
---- input:
1
72.65
---- correct output:
72.65
-- ERROR:
File "XXXX", line 6
    
IndentationError: expected an indented block after 'else' statement on line 5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 13:23:22)
-- CODE: 
x=input()
y=input()
if (x==2):
  z=input("insira ")
  a=y+(z-(25/100)*z)
  print(a)
else:
  print(y)
  
  
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2
55.50
100.25
---- correct output:
130.69
---- user output:
55.50
-- TEST CASE 2:
---- input:
2
50.00
100.00
---- correct output:
125.0
---- user output:
50.00
-- TEST CASE 3:
---- input:
1
100.50
---- correct output:
100.5
---- user output:
100.50
-- TEST CASE 4:
---- input:
2
99.99
120.25
---- correct output:
190.18
---- user output:
99.99
-- TEST CASE 5:
---- input:
2
10.00
20.00
---- correct output:
25.0
---- user output:
10.00
-- TEST CASE 6:
---- input:
1
72.65
---- correct output:
72.65
---- user output:
72.65
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 13:23:03)
-- CODE: 
x=input()
y=input()
if (x==2):
  z=input("insira ")
  a=y+(z-(25/100)*z)
  print(a)
else:
  print(y)
  
  
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2
55.50
100.25
---- correct output:
130.69
---- user output:
55.50
-- TEST CASE 2:
---- input:
2
50.00
100.00
---- correct output:
125.0
---- user output:
50.00
-- TEST CASE 3:
---- input:
1
100.50
---- correct output:
100.5
---- user output:
100.50
-- TEST CASE 4:
---- input:
2
99.99
120.25
---- correct output:
190.18
---- user output:
99.99
-- TEST CASE 5:
---- input:
2
10.00
20.00
---- correct output:
25.0
---- user output:
10.00
-- TEST CASE 6:
---- input:
1
72.65
---- correct output:
72.65
---- user output:
72.65
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 13:27:07)
-- CODE: 
x=input()
y=int(input)
if (x=="2"):
  z=int(input())
  a=y+(z-(25/100)*z)
  print(round(a,2))
else:
  print("c")

  
  
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2
55.50
100.25
---- correct output:
130.69
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    y=int(input)
      ^^^^^^^^^^
TypeError: int() argument must be a string, a bytes-like object or a real number, not 'builtin_function_or_method'
-- TEST CASE 2:
---- input:
2
50.00
100.00
---- correct output:
125.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    y=int(input)
      ^^^^^^^^^^
TypeError: int() argument must be a string, a bytes-like object or a real number, not 'builtin_function_or_method'
-- TEST CASE 3:
---- input:
1
100.50
---- correct output:
100.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    y=int(input)
      ^^^^^^^^^^
TypeError: int() argument must be a string, a bytes-like object or a real number, not 'builtin_function_or_method'
-- TEST CASE 4:
---- input:
2
99.99
120.25
---- correct output:
190.18
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    y=int(input)
      ^^^^^^^^^^
TypeError: int() argument must be a string, a bytes-like object or a real number, not 'builtin_function_or_method'
-- TEST CASE 5:
---- input:
2
10.00
20.00
---- correct output:
25.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    y=int(input)
      ^^^^^^^^^^
TypeError: int() argument must be a string, a bytes-like object or a real number, not 'builtin_function_or_method'
-- TEST CASE 6:
---- input:
1
72.65
---- correct output:
72.65
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    y=int(input)
      ^^^^^^^^^^
TypeError: int() argument must be a string, a bytes-like object or a real number, not 'builtin_function_or_method'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 13:28:13)
-- CODE: 
x=input()
y=float(input())
if (x=="2"):
  z=float(input())
  a=y+(z-(25/100)*z)
  print(round(a,2))
else:
  print(y)

  
  
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
2
55.50
100.25
---- correct output:
130.69
---- user output:
130.69
-- TEST CASE 2:
---- input:
2
50.00
100.00
---- correct output:
125.0
---- user output:
125.0
-- TEST CASE 3:
---- input:
1
100.50
---- correct output:
100.5
---- user output:
100.5
-- TEST CASE 4:
---- input:
2
99.99
120.25
---- correct output:
190.18
---- user output:
190.18
-- TEST CASE 5:
---- input:
2
10.00
20.00
---- correct output:
25.0
---- user output:
25.0
-- TEST CASE 6:
---- input:
1
72.65
---- correct output:
72.65
---- user output:
72.65
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
